--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
 <body ng-app="app" ng-controller="videoController">
     <div class="col-md-12 col-sm-12 col-xs-12 image" style="background-image: url('../assets/images/nav_bar.png')">
         <img class="col-md-1 col-sm-1 col-xs-1 backarrow img-responsive nopadd" src="..\assets\images\Back.png" />
-        <div class="col-md-5 col-sm-5 col-xs-4 title nopadd">{{videoData.page.title}}</div>
+        <div class="col-md-5 col-sm-5 col-xs-4 title nopadd">H{{videoData.page.title}}</div>
         <div class="col-md-5 col-sm-5 col-xs-6 searchbox"><input type="text" id="searchtext" ng-model="searchword"/></div>
         <img class="col-md-1 col-sm-1 col-xs-1 search img-responsive nopadd" src="..\assets\images\search.png" />
     </div>
