--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,98 +16,26 @@
     <script src="../assets/js/script.js"></script>
     <script src="module/app.js"></script>
 </head>
-<style>
-    .image {
-        background-image: url('../assets/images/nav_bar.png');
-        background-size: 100%100%;
-        height: 192px;
-    }
-
-    .backarrow {
-        padding-left: 20px !important;
-        padding-top: 40px !important;
-        width: 3.5%;
-    }
-
-    .title {
-        padding-top: 40px !important;
-        font-size: 20px;
-        color: white;
-        padding-left: 20px !important;
-    }
-
-    .search {
-        width: 2.5%;
-        padding-top: 40px !important;
-        cursor:pointer;
-    }
-
-    .nopadd {
-        padding: 0;
-    }
-
-    .searchbox{
-        padding-top:40px;
-    }
-
-    .tileimg{
-        padding-bottom:24px;
-    }
-
-    .tiletitle{
-        padding-bottom:90px;
-        font-size:20px;
-    }
-
-    #searchtext{
-        border-radius: 10px;
-    }
-
-    @media screen and (max-width: 768px) {
-        .backarrow {
-            width: 10%;
-        }
-
-        .search {
-            width: 5%;
-        }
-
-        .title {
-            font-size: 16px;
-        }
-    }
-</style>
 
 <body ng-app="app" ng-controller="videoController">
     <div class="col-md-12 col-sm-12 col-xs-12 image" style="background-image: url('../assets/images/nav_bar.png')">
         <img class="col-md-1 col-sm-1 col-xs-1 backarrow img-responsive nopadd" src="..\assets\images\Back.png" />
-        <div class="col-md-5 col-sm-5 col-xs-4 title nopadd">H{{videoData.page.title}}</div>
-        <div class="col-md-5 col-sm-5 col-xs-6 searchbox"><input type="text" id="searchtext" ng-model="searchword"/></div>
-        <img class="col-md-1 col-sm-1 col-xs-1 search img-responsive nopadd" src="..\assets\images\search.png" />
+        <div class="col-md-5 col-sm-5 col-xs-4 title nopadd">{{videoData.page.title}}</div>
+        <div class="searchbox">
+            <input type="search" placeholder="Search......" name="search" ng-model="searchword" class="searchbox-input" onkeyup="buttonUp();" required>
+            <span class="searchbox-icon"><i class="fa fa-search" aria-hidden="true"></i></span>
+        </div>
+        <!-- <div class="col-md-5 col-sm-5 col-xs-6 searchbox">
+            <!-- <input type="text" id="searchtext" ng-model="searchword" /> -->
+        <!-- <img class="col-md-1 col-sm-1 col-xs-1 search img-responsive nopadd" src="..\assets\images\search.png" /> -->
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 totaldiv nopadd" infinite-scroll='loadMore()' infinite-scroll-distance='2'>
         <div class="col-md-12 col-sm-12 col-xs-12" ng-repeat="y in tiles">
-        <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd" ng-repeat="x in y|filter:searchword">
-            <img class="col-md-12 col-sm-12 col-xs-12 tileimg" ng-src="..\assets\images\{{x['poster-image']}}" />
-            <div class="tiletitle col-md-12 col-sm-12 col-xs-12">{{x.name}}</div>
+            <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd" ng-repeat="x in y|filter:searchword">
+                <img class="col-md-12 col-sm-12 col-xs-12 tileimg" ng-src="..\assets\images\{{x['poster-image']}}" />
+                <div class="tiletitle col-md-12 col-sm-12 col-xs-12">{{x.name}}</div>
+            </div>
         </div>
-        </div>
-        <!-- <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd">
-            <img class="col-md-12 col-sm-12 col-xs-12 tileimg" src="..\assets\images\poster1.jpg" />
-            <div class="tiletitle col-md-12 col-sm-12 col-xs-12">Sample Movie 123</div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd">
-            <img class="col-md-12 col-sm-12 col-xs-12 tileimg" src="..\assets\images\poster1.jpg" />
-            <div class="tiletitle col-md-12 col-sm-12 col-xs-12">Sample Movie 123</div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd">
-            <img class="col-md-12 col-sm-12 col-xs-12 tileimg" src="..\assets\images\poster1.jpg" />
-            <div class="tiletitle col-md-12 col-sm-12 col-xs-12">Sample Movie 123</div>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-4 tilediv nopadd">
-            <img class="col-md-12 col-sm-12 col-xs-12 tileimg" src="..\assets\images\poster1.jpg" />
-            <div class="tiletitle col-md-12 col-sm-12 col-xs-12">Sample Movie 123</div>
-        </div> -->
     </div>
 
 </body>
